--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -8,7 +8,8 @@
             line-height: 1.6;
         }
 
-        header {
+        header,
+        footer {
             background-color: #333;
             color: #fff;
             padding: 10px;
@@ -27,7 +28,7 @@
         }
 
         h2 {
-            border-bottom: 1px #222;
+            border-bottom: 1px solid #222;
         }
 
         img {
@@ -37,11 +38,11 @@
         }
 
         section {
-            margin: 20px;
-            border: 1px solid rgba(0, 0, 0, 10%);
+            margin: 20px 0;
+            border: 1px solid rgba(0 0 0 / 10%);
             padding: 10px;
             background-color: #abe;
-            font-size: 9rem;
+
         }
 
         section p {
@@ -49,7 +50,7 @@
         }
 
         ul {
-            margin: 10px;
+            margin: 10px 20px;
         }
 
         footer {
